fixing some styles that were too global in nature for headers and spacing; added link to footer logo and alt tags to both logos

--- a/resources/assets/js/gutenberg/editor-style.scss
+++ b/resources/assets/js/gutenberg/editor-style.scss
@@ -84,6 +84,8 @@ h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is
 }
 .wp-block-button {
 	margin: 20px 0px 10px 0px;
+	
+	a { text-decoration: none; }
 }
 .wp-block-column:not(:first-child){
 	margin-left: 0px;
