--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -30,7 +30,7 @@ h3 {
 }
 
 h1, h2, h3, h4 {
-	text-transform: lowercase !important;
+	text-transform: lowercase;
 }
 
 p {
